--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,25 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "watch": "nodemon server.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "apollo-server-errors": "^3.3.1",
-        "apollo-server-express": "^3.6.2",
-        "bcryptjs": "^2.4.3",
-        "dotenv": "^16.3.1",
-        "express": "^4.17.2",
-        "graphql": "^16.3.0",
-        "jsonwebtoken": "^9.0.0",
-        "mongoose": "^7.0.2"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.3"
-    }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"watch": "nodemon server.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@apollo/server": "^4.12.1",
+		"bcryptjs": "^2.4.3",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"graphql": "^16.9.0",
+		"graphql-tag": "^2.12.6",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.9.4",
+		"nodemon": "^3.1.10"
+	}
 }
