--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 node_modules
 .env
+.github
+.DS_Store
+dist
+coverage
+.vscode
+npm-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
+*.log
+*.tmp
+
